--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,25 @@
 // Footer Styles
+form {
+  display: inline-block;
+  width: 50%;
+
+ @media @phone {
+   width: 80%;
+   font-size: 1.5rem;
+   text-align: center;
+   padding-left: 2rem;
+   margin-left: 2.5rem;
+   margin-top: 2rem;
+   
+ } 
+
+  input {
+    width: 100%;
+    margin: 5%;
+    padding: 2%;
+  }
+}
+
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -8,4 +29,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+
+
 }
+
+
