--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
 
   .intro {
+    margin-top: 15.5rem;
 
     h2 {
       padding: 15px;
