--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,12 @@
 // Navigation code here
 
 .navigation {
-    opacity: 20%;
     background-color: @porcelain;
+    position: fixed; 
+    top: 0;
+    width: 100%;
+    opacity: 0.7;
+
 
     
     .spaceWalkers {
